--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -19,11 +19,11 @@ jobs:
           flutter-version: '3.13.0'
           channel: 'stable'
 
+      - name: Disable Flutter Telemetry
+        run: flutter config --no-analytics
+
       - name: Get dependencies
         run: flutter pub get
-
-      - name: Format check
-        run: flutter format --set-exit-if-changed .
 
       - name: Analyze
         run: flutter analyze
