feat: animações e melhorias na UI.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -69,6 +70,12 @@ flutter:
   assets:
       - assets/
   #   - images/a_dot_ham.jpeg
+
+flutter_launcher_icons:
+  android: "launcher_icon" # Habilita para Android
+  ios: true # Habilita para iOS
+  image_path: "assets/logo.png" # Caminho para a sua imagem
+  min_sdk_android: 21 # (Opcional) Garante compatibilidade
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
